--- a/challenge5.css
+++ b/challenge5.css
@@ -68,3 +68,23 @@
 .menu-button:hover {
     background-color: #555;
 }
+
+/* Add this in your challenge5.css */
+@keyframes explosion {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.5);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
+}
+
+.matched {
+    animation: explosion 1s forwards;
+}
